
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_Framework_Component" #DDDDDD
{

class "DMA::IComponent"
{
}

}

package "DMA_SearchView_API" #DDDDDD
{

class "CSearchResultView"
{
}

class "CSearchViewComponent"
{
}

class "ISearchResultModel"
{
    + {abstract} virtual int getFileIdx( const QModelIndex& idx ) const = 0
    + {abstract} virtual std::pair<bool__tIntRange> addNextMessageIdxVec(const tFoundMatchesPack& foundMatchesPack) = 0
    + {abstract} virtual std::pair<int__QString > getUMLDiagramContent() const = 0
    + {abstract} virtual tPlotContent createPlotContent() const = 0
    + {abstract} virtual void resetData() = 0
    + {abstract} virtual void setFile(const tFileWrapperPtr& pFile) = 0
    + {abstract} virtual void updateView(const int& fromRow = 0) = 0
}

}

package "DMA_Settings_API" #DDDDDD
{

class "CSettingsManagerClient"
{
}

}

package "Qt" #DDDDDD
{

class "QObject"
{
}

class "QTableView"
{
}

}

'====================Inheritance section====================
QTableView <|-- CSearchResultView : extends
CSettingsManagerClient <|-- CSearchViewComponent : extends
DMA::IComponent <|-- CSearchViewComponent : implements
QObject <|-- CSearchViewComponent : extends

'====================Dependencies section====================
CSearchViewComponent "1" o-- "1" CSearchResultView : uses
CSearchViewComponent "1" *-- "1" ISearchResultModel : contains

@enduml